--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,22 +2,25 @@
   <div class="container">
     <header class="masthead clearfix">
       {% if site.avatar %}
-        <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" style="border: 1px solid #DDD;" /></a>
+      <a href="{{ site.baseurl }}/" class="site-avatar"
+        ><img src="{{ site.avatar }}"
+      /></a>
       {% endif %}
 
       <div class="site-info">
-        <h1 class="site-name"><a href="{{ site.baseurl }}/"><b>{{ site.name }}</b></a></h1>
+        <h1 class="site-name">
+          <a href="{{ site.baseurl }}/"><b>{{ site.name }}</b></a>
+        </h1>
         <p class="site-description">{{ site.description }}</p>
       </div>
 
       <nav>
-        {% for nav in site.navigation %}
-        {% if nav.url contains 'http://' or nav.url contains 'https://' %}
+        {% for nav in site.navigation %} {% if nav.url contains 'http://' or
+        nav.url contains 'https://' %}
         <a href="{{ nav.url }}">{{ nav.name }}</a>
         {% else %}
         <a href="{{ site.baseurl }}{{ nav.url }}">{{ nav.name }}</a>
-        {% endif %}
-        {% endfor %}
+        {% endif %} {% endfor %}
       </nav>
     </header>
   </div>
